# python_15062026

./: app_flask.py  carre.py  celery_broker.db  celery_main.py  celery_results.db  celery_tasks.py  cercle.py  control_flow.py  customer_dao.py  customers.rest  data_rectangle.py  data_structure_dict.py  data_structure_list.py  data_structure_set.py  data_structure_tuple.py  fibo.py  fibo_propre.py  hello.py  icalcgeo.py  le_fichier.txt  main.ui  main_async.py  main_cprofile.py  main_cpu_bound.py  main_csv.py  main_csv2.py  main_error.py  main_fastapi.py  main_fibo.py  main_herit_mult.py  main_import.py  main_input_output.py  main_multiprocess.py  main_multithread.py  main_perf.py  main_pydantic.py  main_requests.py  main_requests_async.py  main_requests_async_queues.py  main_streamlit.py  (+10 more)
.github/: copilot-instructions.md
.github/agents/: CodeStyleReviewer.agent.md
.github/skills/python-code-style/: SKILL.md
db/: customers_db.db
demo_module/: main_fibo.py
templates/: customers.html
tests/: conftest.py  test_api.py  test_carre.py  test_customer_dao.py  test_customer_dao_unittest.py  test_rectangle.py
