[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-15062026"
version = "0.1.0"
description = "Exercices et exemples Python."
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
	"Flask>=3.1.3",
	"requests>=2.34.2",
	"beautifulsoup4>=4.15.0",
	"httpx>=0.28.1",
	"celery>=5.6.3",
	"fastapi>=0.137.2",
	"uvicorn>=0.49.0",
	"pydantic>=2.13.4",
	"streamlit>=1.58.0",
	"PySide6>=6.11.1",
]

[project.optional-dependencies]
dev = ["pytest>=9.1.0", "pytest-cov>=7.1.0", "pytest-mock>=3.15.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -v"
pythonpath = ["."]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade,
# B: bugbear, SIM: simplify, RUF: règles Ruff
# W: pycodestyle, E: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: bugbear, SIM: simplify, RUF: règles Ruff
# N: naming, D: docstring, S: security, T: typing, C: complexity
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = []


[tool.mypy]
python_version = 3.13
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
